// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tableCellInlineCode preserves escaped pipe chars inside text table cells 1`] = `
Object {
  "children": Array [
    Object {
      "type": "text",
      "value": "






",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "position": Object {
                        "end": Object {
                          "column": 54,
                          "line": 2,
                          "offset": 54,
                        },
                        "start": Object {
                          "column": 3,
                          "line": 2,
                          "offset": 3,
                        },
                      },
                      "type": "text",
                      "value": "these | stay | escaped | inside | a single cell",
                    },
                  ],
                  "position": Object {
                    "end": Object {
                      "column": 54,
                      "line": 2,
                      "offset": 54,
                    },
                    "start": Object {
                      "column": 3,
                      "line": 2,
                      "offset": 3,
                    },
                  },
                  "properties": Object {
                    "align": "left",
                  },
                  "tagName": "th",
                  "type": "element",
                },
                Object {
                  "children": Array [],
                  "position": Object {
                    "end": Object {
                      "column": 57,
                      "line": 2,
                      "offset": 57,
                    },
                    "start": Object {
                      "column": 57,
                      "line": 2,
                      "offset": 57,
                    },
                  },
                  "properties": Object {
                    "align": "left",
                  },
                  "tagName": "th",
                  "type": "element",
                },
              ],
              "position": Object {
                "end": Object {
                  "column": 58,
                  "line": 2,
                  "offset": 58,
                },
                "start": Object {
                  "column": 1,
                  "line": 2,
                  "offset": 1,
                },
              },
              "properties": Object {},
              "tagName": "tr",
              "type": "element",
            },
          ],
          "position": Object {
            "end": Object {
              "column": 58,
              "line": 2,
              "offset": 58,
            },
            "start": Object {
              "column": 1,
              "line": 2,
              "offset": 1,
            },
          },
          "properties": Object {},
          "tagName": "thead",
          "type": "element",
          "value": "these | stay | escaped | inside | a single cell",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 12,
          "line": 3,
          "offset": 70,
        },
        "start": Object {
          "column": 1,
          "line": 2,
          "offset": 1,
        },
      },
      "properties": Object {},
      "tagName": "table",
      "type": "element",
    },
  ],
  "data": Object {
    "quirksMode": false,
  },
  "position": Object {
    "end": Object {
      "column": 2,
      "line": 6,
      "offset": 74,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`tableCellInlineCode splits table cells when inline code contains "unescaped" pipe chars 1`] = `
Object {
  "children": Array [
    Object {
      "type": "text",
      "value": "






",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "position": Object {
                        "end": Object {
                          "column": 8,
                          "line": 2,
                          "offset": 8,
                        },
                        "start": Object {
                          "column": 3,
                          "line": 2,
                          "offset": 3,
                        },
                      },
                      "type": "text",
                      "value": "\`this",
                    },
                  ],
                  "position": Object {
                    "end": Object {
                      "column": 8,
                      "line": 2,
                      "offset": 8,
                    },
                    "start": Object {
                      "column": 3,
                      "line": 2,
                      "offset": 3,
                    },
                  },
                  "properties": Object {
                    "align": "left",
                  },
                  "tagName": "th",
                  "type": "element",
                },
                Object {
                  "children": Array [
                    Object {
                      "position": Object {
                        "end": Object {
                          "column": 17,
                          "line": 2,
                          "offset": 17,
                        },
                        "start": Object {
                          "column": 11,
                          "line": 2,
                          "offset": 11,
                        },
                      },
                      "type": "text",
                      "value": "splits",
                    },
                  ],
                  "position": Object {
                    "end": Object {
                      "column": 17,
                      "line": 2,
                      "offset": 17,
                    },
                    "start": Object {
                      "column": 11,
                      "line": 2,
                      "offset": 11,
                    },
                  },
                  "properties": Object {
                    "align": "left",
                  },
                  "tagName": "th",
                  "type": "element",
                },
              ],
              "position": Object {
                "end": Object {
                  "column": 51,
                  "line": 2,
                  "offset": 51,
                },
                "start": Object {
                  "column": 1,
                  "line": 2,
                  "offset": 1,
                },
              },
              "properties": Object {},
              "tagName": "tr",
              "type": "element",
            },
          ],
          "position": Object {
            "end": Object {
              "column": 51,
              "line": 2,
              "offset": 51,
            },
            "start": Object {
              "column": 1,
              "line": 2,
              "offset": 1,
            },
          },
          "properties": Object {},
          "tagName": "thead",
          "type": "element",
          "value": "\`this splits",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 12,
          "line": 3,
          "offset": 63,
        },
        "start": Object {
          "column": 1,
          "line": 2,
          "offset": 1,
        },
      },
      "properties": Object {},
      "tagName": "table",
      "type": "element",
    },
  ],
  "data": Object {
    "quirksMode": false,
  },
  "position": Object {
    "end": Object {
      "column": 2,
      "line": 6,
      "offset": 67,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`tableCellInlineCode unescapes escaped pipe chars inside inline code within table cells 1`] = `
Object {
  "children": Array [
    Object {
      "type": "text",
      "value": "












",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [],
                  "position": Object {
                    "end": Object {
                      "column": 6,
                      "line": 2,
                      "offset": 6,
                    },
                    "start": Object {
                      "column": 6,
                      "line": 2,
                      "offset": 6,
                    },
                  },
                  "properties": Object {
                    "align": "left",
                  },
                  "tagName": "th",
                  "type": "element",
                },
                Object {
                  "children": Array [],
                  "position": Object {
                    "end": Object {
                      "column": 11,
                      "line": 2,
                      "offset": 11,
                    },
                    "start": Object {
                      "column": 11,
                      "line": 2,
                      "offset": 11,
                    },
                  },
                  "properties": Object {
                    "align": "left",
                  },
                  "tagName": "th",
                  "type": "element",
                },
              ],
              "position": Object {
                "end": Object {
                  "column": 12,
                  "line": 2,
                  "offset": 12,
                },
                "start": Object {
                  "column": 1,
                  "line": 2,
                  "offset": 1,
                },
              },
              "properties": Object {},
              "tagName": "tr",
              "type": "element",
            },
          ],
          "position": Object {
            "end": Object {
              "column": 12,
              "line": 2,
              "offset": 12,
            },
            "start": Object {
              "column": 1,
              "line": 2,
              "offset": 1,
            },
          },
          "properties": Object {},
          "tagName": "thead",
          "type": "element",
          "value": "",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "children": Array [
                        Object {
                          "type": "text",
                          "value": "one | two | three | four",
                        },
                      ],
                      "position": Object {
                        "end": Object {
                          "column": 32,
                          "line": 4,
                          "offset": 56,
                        },
                        "start": Object {
                          "column": 3,
                          "line": 4,
                          "offset": 27,
                        },
                      },
                      "properties": Object {},
                      "tagName": "code",
                      "type": "element",
                    },
                  ],
                  "position": Object {
                    "end": Object {
                      "column": 32,
                      "line": 4,
                      "offset": 56,
                    },
                    "start": Object {
                      "column": 3,
                      "line": 4,
                      "offset": 27,
                    },
                  },
                  "properties": Object {
                    "align": "left",
                  },
                  "tagName": "td",
                  "type": "element",
                },
                Object {
                  "children": Array [
                    Object {
                      "position": Object {
                        "end": Object {
                          "column": 38,
                          "line": 4,
                          "offset": 62,
                        },
                        "start": Object {
                          "column": 35,
                          "line": 4,
                          "offset": 59,
                        },
                      },
                      "type": "text",
                      "value": "two",
                    },
                  ],
                  "position": Object {
                    "end": Object {
                      "column": 38,
                      "line": 4,
                      "offset": 62,
                    },
                    "start": Object {
                      "column": 35,
                      "line": 4,
                      "offset": 59,
                    },
                  },
                  "properties": Object {
                    "align": "left",
                  },
                  "tagName": "td",
                  "type": "element",
                },
              ],
              "position": Object {
                "end": Object {
                  "column": 40,
                  "line": 4,
                  "offset": 64,
                },
                "start": Object {
                  "column": 1,
                  "line": 4,
                  "offset": 25,
                },
              },
              "properties": Object {},
              "tagName": "tr",
              "type": "element",
            },
          ],
          "position": Object {
            "end": Object {
              "column": 40,
              "line": 4,
              "offset": 64,
            },
            "start": Object {
              "column": 1,
              "line": 4,
              "offset": 25,
            },
          },
          "properties": Object {},
          "tagName": "tbody",
          "type": "element",
          "value": "one | two | three | four two",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 40,
          "line": 4,
          "offset": 64,
        },
        "start": Object {
          "column": 1,
          "line": 2,
          "offset": 1,
        },
      },
      "properties": Object {},
      "tagName": "table",
      "type": "element",
    },
  ],
  "data": Object {
    "quirksMode": false,
  },
  "position": Object {
    "end": Object {
      "column": 2,
      "line": 7,
      "offset": 68,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`tableCellInlineCode unescapes escaped pipe chars inside inline code within table headers 1`] = `
Object {
  "children": Array [
    Object {
      "type": "text",
      "value": "






",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "children": Array [
                        Object {
                          "type": "text",
                          "value": "one | two | three | four",
                        },
                      ],
                      "position": Object {
                        "end": Object {
                          "column": 32,
                          "line": 2,
                          "offset": 32,
                        },
                        "start": Object {
                          "column": 3,
                          "line": 2,
                          "offset": 3,
                        },
                      },
                      "properties": Object {},
                      "tagName": "code",
                      "type": "element",
                    },
                  ],
                  "position": Object {
                    "end": Object {
                      "column": 32,
                      "line": 2,
                      "offset": 32,
                    },
                    "start": Object {
                      "column": 3,
                      "line": 2,
                      "offset": 3,
                    },
                  },
                  "properties": Object {
                    "align": "left",
                  },
                  "tagName": "th",
                  "type": "element",
                },
                Object {
                  "children": Array [
                    Object {
                      "position": Object {
                        "end": Object {
                          "column": 38,
                          "line": 2,
                          "offset": 38,
                        },
                        "start": Object {
                          "column": 35,
                          "line": 2,
                          "offset": 35,
                        },
                      },
                      "type": "text",
                      "value": "two",
                    },
                  ],
                  "position": Object {
                    "end": Object {
                      "column": 38,
                      "line": 2,
                      "offset": 38,
                    },
                    "start": Object {
                      "column": 35,
                      "line": 2,
                      "offset": 35,
                    },
                  },
                  "properties": Object {
                    "align": "left",
                  },
                  "tagName": "th",
                  "type": "element",
                },
              ],
              "position": Object {
                "end": Object {
                  "column": 40,
                  "line": 2,
                  "offset": 40,
                },
                "start": Object {
                  "column": 1,
                  "line": 2,
                  "offset": 1,
                },
              },
              "properties": Object {},
              "tagName": "tr",
              "type": "element",
            },
          ],
          "position": Object {
            "end": Object {
              "column": 40,
              "line": 2,
              "offset": 40,
            },
            "start": Object {
              "column": 1,
              "line": 2,
              "offset": 1,
            },
          },
          "properties": Object {},
          "tagName": "thead",
          "type": "element",
          "value": "one | two | three | four two",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 12,
          "line": 3,
          "offset": 52,
        },
        "start": Object {
          "column": 1,
          "line": 2,
          "offset": 1,
        },
      },
      "properties": Object {},
      "tagName": "table",
      "type": "element",
    },
  ],
  "data": Object {
    "quirksMode": false,
  },
  "position": Object {
    "end": Object {
      "column": 2,
      "line": 6,
      "offset": 56,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;
